unpackaged/main/default/objects/Response_Task__c/Response_Task__c.object-meta.xml
<CustomObject>
    <label>Response Task</label>
    <nameField>
        <displayFormat>RT-{0000000}</displayFormat>
        <label>Response Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>