unpackaged/main/default/objects/Response_Task__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <label>Bid</label>
    <referenceTo>BID__c</referenceTo>
    <relationshipLabel>Response Tasks</relationshipLabel>
    <relationshipName>Response_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>