unpackaged/main/default/objects/Response_Task__c/fields/Key_Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Key_Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Response_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>