unpackaged/main/default/objects/Response_Task__c/fields/Others_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Others_Responsible__c</fullName>
    <label>Others Responsible</label>
    <type>TextArea</type>
</CustomField>