unpackaged/main/default/objects/Response_Task__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Earnie IQ</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
            <value>
                <fullName>Health Metrics</fullName>
            </value>
            <value>
                <fullName>IT Glovebox</fullName>
            </value>
            <value>
                <fullName>ScanWatcher</fullName>
            </value>
            <value>
                <fullName>Technology One Contracts</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Adaptive Solutions</fullName>
            </value>
            <value>
                <fullName>TechnologyOne ADF</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Breakout Packs</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Corporate Performance Management</fullName>
            </value>
            <value>
                <fullName>TechnologyOne CPM External Systems Connectors</fullName>
            </value>
            <value>
                <fullName>TechnologyOne CRM</fullName>
            </value>
            <value>
                <fullName>TechnologyOne ECM</fullName>
            </value>
            <value>
                <fullName>TechnologyOne ECR External Systems</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Enterprise Asset Management</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Enterprise Cash Receipting</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Fax Gateway</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Financials</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Fleet Solution</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Hosting Services</fullName>
            </value>
            <value>
                <fullName>TechnologyOne HR and Payroll</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Mobile</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Performance Planning</fullName>
            </value>
            <value>
                <fullName>TechnologyOne PLUS</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Property</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Publisher</fullName>
            </value>
            <value>
                <fullName>TechnologyOne R &amp; D</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Services Only</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Solution Fee</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Solution Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>