unpackaged/main/default/objects/Response_Task__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appendices</fullName>
            </value>
            <value>
                <fullName>Appendix C - Roles and Deliverables</fullName>
            </value>
            <value>
                <fullName>Appendix D - Indicative Project Plan</fullName>
            </value>
            <value>
                <fullName>Cloud Pricing</fullName>
            </value>
            <value>
                <fullName>Cloud Responses</fullName>
            </value>
            <value>
                <fullName>Collate Responses</fullName>
            </value>
            <value>
                <fullName>Corporate Responses</fullName>
            </value>
            <value>
                <fullName>Cover Letter</fullName>
            </value>
            <value>
                <fullName>Document Schedule</fullName>
            </value>
            <value>
                <fullName>Executive Summary</fullName>
            </value>
            <value>
                <fullName>Format Documents</fullName>
            </value>
            <value>
                <fullName>Implementation Pricing</fullName>
            </value>
            <value>
                <fullName>Investment Summary</fullName>
            </value>
            <value>
                <fullName>Legal Terms and Conditions</fullName>
            </value>
            <value>
                <fullName>License Pricing</fullName>
            </value>
            <value>
                <fullName>Product Responses</fullName>
            </value>
            <value>
                <fullName>Services Pricing</fullName>
            </value>
            <value>
                <fullName>Services Responses</fullName>
            </value>
            <value>
                <fullName>Solution Overview</fullName>
            </value>
            <value>
                <fullName>T1 Standard Response Document, Section 3, SIM 9 update</fullName>
            </value>
            <value>
                <fullName>Technical Responses</fullName>
            </value>
            <value>
                <fullName>AMS Pricing and Responses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>